--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Score keeper</h1>
     </header>
     <div class="container main1">
+        <div class="row">
         <div class="scorebox" id="box1">
             <h2>Player 1</h2>
             <h3>Wins: </h3>
@@ -25,6 +26,8 @@
             <h2 id="winCount2">0</h2>
             <button id="player2but">+</button>
         </div>
+    </div>
+    <div class="row">
         <div class="scorebox" id="box3">
             <h2>Player 3</h2>
             <h3>Wins: </h3>
@@ -38,7 +41,7 @@
             <button id="player4but">+</button>
         </div>
     </div>
-
+</div>
     <script src="./index.js"></script>
 </body>
 </html>
